Fix minor footer clipping

--- a/src/main/scss/custom.scss
+++ b/src/main/scss/custom.scss
@@ -92,7 +92,7 @@ a {
 }
 
 .content-wrap {
-  padding-bottom: 300px;
+  padding-bottom: 400px; // TODO: Change this dynamically to the height of the footer
 }
 // /set/XXX/ - Actions
 .ts-link-action {
